fix footer spacing and remove unnecessary closing div tag

--- a/source/stylesheets/base.css
+++ b/source/stylesheets/base.css
@@ -51,6 +51,15 @@ img {
 .nav-logo {
   margin-top: -5px;
 }
+
+iframe[name='google_conversion_frame'] { 
+  height: 0 !important;
+  width: 0 !important; 
+  line-height: 0 !important; 
+  font-size: 0 !important;
+  margin-top: -13px;
+  float: left;
+}
  
 /* Content Dividers
 -------------------------------------------------- */
